# testnet-faucet

./: Cargo.toml  Dockerfile  README.md  justfile
src/: main.rs
