[package]
name = "testnet-faucet"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
alloy-json-rpc = "0.5.4"
alloy-primitives = "0.8.10"
alloy-provider = "0.5.4"
alloy-rpc-types = "0.5.4"
alloy-signer = "0.5.4"
alloy-signer-local = "0.5.4"
alloy-transport-http = "0.5.4"
chrono = "0.4.0"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }